# ctv-orderentry

./: .dockerignore  .gitattributes  .gitignore  BROWSER_FIX.md  CLAUDE.md  Dockerfile  INTEGRATION_GUIDE_ACTUAL.txt  Launch Control Room.bat  Launch Order Entry.bat  MIGRATION_GUIDE.md  MINIMAL_INTEGRATION_EXAMPLE.py  MISFIT_CHANGES_SUMMARY.md  MULTI_ORDER_DETECTION.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PHASE7_COMPLETE.md  PROJECT_COMPLETE.md  README.md  SESSION_STATUS.md  SETUP_GUIDE.md  TCAA_AUTOMATION_README.md  credential_loader.py  customer_matcher_browser.py  diagnose_split.py  docker-compose.yml  fix_range_selection.py  fix_split_tcaa_orders.py  init_customers.py  main.py  presentation_example.py  pyproject.toml  requirements-dev.txt  run_all_tests.py  scan_incoming.py  seed_customer_templates.py  show_schema.py  tcaa_order_processor.py  (+6 more)
archive/: range_selection_fix.py  tcaa_integration.py  test_detection.py
archived scripts/: CHARMAINE_GENERIC_TEMPLATE_DOCUMENTATION.md  EXAMPLE_SIMPLE_AGENCY_FILES.py  diagnose_split_fixed.py  order_scanner_fix.py  tcaa_parser_fix.py  test_factory.py  test_multi_order.py
browser_automation/: DEPLOYMENT_GUIDE.md  MISFIT_INTEGRATION_GUIDE_UPDATED.md  UNIVERSAL_CUSTOMER_SELECTION.md  acm_automation.py  added_value.py  admerasia_automation.py  ai_fallback_automation.py  brentan_automation.py  bvk_automation.py  charmaine_automation.py  crispin_automation.py  customer_defaults.py  dart_automation.py  daviselen_automation.py  day_utils.py  eqc_automation.py  (+40 more)
(+344 files in other folders)
